[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/life.svg" type="Texture" id=1]
[ext_resource path="res://gui/gui.gd" type="Script" id=2]
[ext_resource path="res://gui/fonts/contrailone_regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/fonts/goldman_regular.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.478431, 0.478431, 0.478431, 0.117647 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -29.0
margin_right = 79.0
margin_bottom = 29.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scorewrapper" type="HBoxContainer" parent="MainMenu/Menu"]
margin_right = 158.0
margin_bottom = 20.0

[node name="ScoreLabel" type="Label" parent="MainMenu/Menu/Scorewrapper"]
margin_right = 142.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "You survived for:"

[node name="Score" type="Label" parent="MainMenu/Menu/Scorewrapper"]
margin_left = 146.0
margin_right = 158.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HSeparator" type="HSeparator" parent="MainMenu/Menu"]
margin_top = 24.0
margin_right = 158.0
margin_bottom = 28.0

[node name="NewGame" type="Button" parent="MainMenu/Menu"]
margin_top = 32.0
margin_right = 158.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 4 )
text = "New Game"

[node name="Label" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_bottom = 263.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.337255, 0.905882, 1 )
custom_colors/font_outline_modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
custom_colors/font_color_shadow = Color( 0.584314, 0.584314, 0.584314, 1 )
text = "Kuumela"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -190.0
margin_right = 186.0
custom_fonts/font = ExtResource( 4 )
text = "Controls

Clockwise - D / Right / Gamepad Right
Counter-Clockwise - A / Left / Gamepad Left


Try to survive as long as you can...
"
align = 1

[node name="Game" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="Game"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="VBoxContainer" parent="Game/BottomPanel"]
anchor_left = 0.5
anchor_right = 1.0
margin_top = 8.0
margin_right = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="Game/BottomPanel/LivesContainer"]
margin_right = 488.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Lives:"
align = 2

[node name="Lives" type="HBoxContainer" parent="Game/BottomPanel/LivesContainer"]
margin_top = 24.0
margin_right = 488.0
margin_bottom = 56.0
alignment = 2

[node name="Life1" type="TextureRect" parent="Game/BottomPanel/LivesContainer/Lives"]
margin_left = 384.0
margin_right = 416.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Life2" type="TextureRect" parent="Game/BottomPanel/LivesContainer/Lives"]
margin_left = 420.0
margin_right = 452.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Life3" type="TextureRect" parent="Game/BottomPanel/LivesContainer/Lives"]
margin_left = 456.0
margin_right = 488.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="ScoreContainer" type="VBoxContainer" parent="Game/BottomPanel"]
anchor_right = 0.5
margin_left = 24.0
margin_top = 8.0
margin_right = 93.0
margin_bottom = 49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Game/BottomPanel/ScoreContainer"]
margin_right = 581.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Days Survived:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Game/BottomPanel/ScoreContainer"]
margin_top = 24.0
margin_right = 581.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 0.0117647, 0.984314, 1 )
text = "0
"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu/Menu/NewGame" to="." method="_on_NewGame_pressed"]
